# api/docs/swagger.yaml
@@ -2,14 +2,18 @@ definitions:
   models.ChangePasswordRequest:
     properties:
       new_password:
+        minLength: 6
         type: string
       old_password:
         type: string
+    required:
+    - new_password
+    - old_password
     type: object
   models.GoogleAuthRequest:
     properties:
       code:
-        description: Google authorization code
+        description: OAuth authorization code
         example: 4/0AX4XfW...
         type: string
     required:
@@ -40,11 +44,12 @@ definitions:
     properties:
       refresh_token:
         type: string
+    required:
+    - refresh_token
     type: object
   models.PasswordResetRequest:
     properties:
       email:
-        description: Foydalanuvchi emaili
         type: string
     required:
     - email
@@ -59,13 +64,11 @@ definitions:
   models.ResetPasswordRequest:
     properties:
       new_password:
-        description: Yangi parol
+        minLength: 6
         type: string
       repeat_password:
-        description: Takrorlangan parol
         type: string
       token:
-        description: Token
         type: string
     required:
     - new_password
@@ -82,11 +85,20 @@ definitions:
     type: object
   models.SignupRequest:
     properties:
+      country_code:
+        type: string
       email:
         type: string
+      level:
+        type: string
       name:
+        maxLength: 80
+        minLength: 1
         type: string
       password:
+        minLength: 6
+        type: string
+      target_lang:
         type: string
     required:
     - email
@@ -96,7 +108,6 @@ definitions:
   models.SignupResponse:
     properties:
       id:
-        description: Foydalanuvchi ID si
         type: string
     type: object
 info:
@@ -214,7 +225,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: JWT tokenlarni va sessionni bekor qiladi
+      description: 'JWT tokenlarni va sessionni bekor qiladi (minimal variant: cookie’larni
+        tozalash)'
       parameters:
       - description: Logout request (refresh_token optional)
         in: body
